# Copyright Abel Sinkovics (abel@sinkovics.hu)  2012.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

add_executable(meta_hs_handcrafted main_handcrafted.cpp)
add_executable(meta_hs_in_haskell main_in_haskell.cpp)
include_directories(".")

